<resources>
    <string name="app_name">天天闪购</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Order">订单</string>
    <string name="Sales">销售</string>
    <string name="Products">商品</string>
    <string name="UserNameHint">用户名</string>
    <string name="LoginText">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_account">用户名必须输入</string>
    <string name="error_invalid_password">密码必须输入</string>
    <string name="error_incorrect_password">用户名和密码不正确</string>
    <string name="Search">搜索</string>
    <string name="AddProducts">添加商品</string>
    <string name="Logout">注销</string>
    <string name="ProductsDetails">商品详情</string>
    <string name="NoAddProducts">没有可添加的商品，点击刷新</string>
    <string name="NoInsellingGoods">没有在售商品，点击刷新</string>
    <string name="NoShelvesProducts">没有下架商品，点击刷新</string>
    <string name="DownGoods">下架</string>
    <string name="SetStock">库存查询</string>
    <string name="OrderDetails">订单详情</string>
    <string name="BalanceWithdrawal">余额转出</string>
    <string name="WithDrawRecord">转出记录</string>
    <string name="PromotionProducts">促销商品</string>
</resources>
